--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 </head>
 <body>
   <div align="center">
-    <h1>Felicitaions!</h1>
-    <h2>Ceci est un test pour le site.</h2>
-    <h3>test * le site.</h3>
+    <h1>Bienvenue dans AWS user group</h1>
+    <h2>Ceci est un test pour le pipeline CI/CD.</h2>
+    <h3>Merci Beaucoup</h3>
   </div>
 </body>
 </html>
