--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 </head>
 <body>
   <div align="center">
-    <h1>Bienvenue dans AWS user group</h1>
-    <h2>Ceci est un test pour le pipeline CI/CD.</h2>
+    <h1>Bienvenue dans AWS user group DaKar</h1>
+    <h2>Ceci est un test pour la mise en place d'un pipeline CI/CD.</h2>
     <h3>Merci Beaucoup</h3>
   </div>
 </body>
